# zentra-protocol

./: .gitattributes  .gitignore  DOCS_WEBSITE_PRD.md  PRD.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
circuits/payment-policy/: build.sh  gen-input.mjs  input.example.json  payment_policy.circom  proof.json  public.json  test.sh  to-soroban-vk.mjs  verification_key.json
circuits/spike/: build.sh  mult.circom  proof.json  to-soroban.mjs  verification_key.json
contracts/zentra-verifier/: Cargo.toml
contracts/zentra-verifier/src/: encoding.rs  groth16.rs  lib.rs  payment_fixtures.rs  spike_fixtures.rs  test.rs  vk.rs
contracts/zentra-verifier/test_snapshots/test/: register_initializes_authority_state_at_current_epoch.1.json  revoke_existing_policy_succeeds_and_missing_policy_errors.1.json
examples/vendor-payment-agent/: action.json  demo.ts  package.json  vendors.json
types/: modules.d.ts
