[package]
name = "zentra-verifier"
version = "0.0.1"
edition = "2021"
publish = false
description = "Zentra Protocol — Soroban BN254 Groth16 proof-of-compliance verifier"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# hazmat-address: Address::to_payload() to derive a field element from an address.
# hazmat-crypto:  CAP-0075 Poseidon permutation used for the on-chain receipt hash.
soroban-sdk = { version = "26.1.0", features = ["hazmat-address", "hazmat-crypto"] }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "hazmat-address", "hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
